--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
 }
 
+ul{
+    list-style: none;
+}
 
 a{
     text-decoration: none;
@@ -15,11 +18,12 @@ img{
     height: auto;
 }
 
+
 /*------ Variables --------*/
 :root{
     --header-height: 4.5rem;
     /*Colors*/
-    --hue: 265;
+    --hue: 622;
     /*HSL color mode*/
     --base-color: hsl(var(--hue) 36% 57%);
     --base-color-second: hsl(var(--hue) 65% 88%);
@@ -30,6 +34,7 @@ img{
     --body-color: hsl(0 0% 98%);
 }
 
+
 /*------ BASE --------*/
 body{
     font: 400 1rem 'DM Sans', sans-serif;
@@ -38,7 +43,7 @@ body{
     -webkit-font-smoothing: antialiased;
 }
 
-h1{
+.title{
      font: 700 1.875rem 'Poppins', sans-serif;
      color: var(--title-color);
      -webkit-font-smoothing: auto;
@@ -64,10 +69,21 @@ h1{
     height: 1px;
     background: linear-gradient(
         270deg, 
-        hsla(var(--hue), 36%, 57%, 1) 0%,
-        hsla(var(--hue), 65%, 88%, 0.34) 100%,
+        hsla(var(--hue), 36%, 57%, 1),
+        hsla(var(--hue), 65%, 88%, 0.34) 
     );
 }
+
+.divider-2{
+    height: 1px;
+    background: linear-gradient(
+        270deg, 
+        hsla(var(--hue), 65%, 88%, 0.34),
+        hsla(var(--hue), 36%, 57%, 1)
+    );
+}
+
+
 /*------ LAYOUT --------*/
 .container{
     margin-left: 1.5rem;
@@ -83,6 +99,10 @@ h1{
     padding: 5rem 0;
 }
 
+.section .title{
+    margin-bottom: 1rem;
+}
+
 #header{
     border-bottom: 1px solid #e4e4e4;
     margin-bottom: 2rem;
@@ -94,17 +114,14 @@ h1{
     top: 0;
     left: 0;
     background-color: var(--body-color);
-
 }
 
-nav{
-    height: var(--header-height);
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+main{
+    margin-top: calc(var(--header-height) + 2rem);
 }
 
+
+/*------ lOGO --------*/
 .logo{
     font: 700 1.31rem 'Poppins', sans-serif;
     color: var(--title-color);
@@ -114,14 +131,99 @@ nav{
     color: var(--base-color);
 }
 
-main{
-    margin-top: var(--header-height);
+
+/*------ NAVIGATION --------*/
+
+nav{
+    height: var(--header-height);
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav ul li{
+    text-align: center;
+}
+
+nav ul li a{
+    transition: color 0.3s;
+    position: relative;
+}
+
+nav ul li a:hover{
+    color: var(--base-color);
+}
+
+nav ul li a::after{
+    content: '';
+    width: 0;
+    height: 2px;
+    background: var(--base-color);
+
+    position: absolute;
+    left: 0;
+    bottom: -1rem;
+
+    transition: width 0.3s;
+}
+
+nav ul li a:hover::after{
+    width: 100%;
+}
+
+nav .menu{
+    opacity: 0;
+    visibility: hidden;
+}
+
+/* MOSTRAR MENU */
+nav.show .menu{
+    height: 100vh;
+    width: 100vw;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    opacity: 1;
+    visibility: visible;
+    background: var(--body-color);
+}
+
+nav.show ul.grid{
+    gap: 4rem;
+}
+
+/*Toggle menu*/
+.toggle{
+    color: var(--base-color);
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+nav .icon-close{
+    visibility: hidden;
+    opacity: 0;
+
+    position: absolute;
+    right: 1.5rem;
+}
+
+nav.show div.icon-close{
+    visibility: visible;
+    opacity: 1;
 }
 
 /*------ HOME --------*/
 #home{
     overflow-x: hidden;
 }
+
 #home .container{
     margin: 0;
 }
@@ -151,7 +253,6 @@ main{
     border-radius: 0.25%;
 }
 
-
 #home .text{
     margin-left: 1.5rem;
     margin-right: 1.5rem;
@@ -161,7 +262,48 @@ main{
 #home .text h1{
     margin-bottom: 1rem;
 }
+
 #home .text p{
     margin-bottom: 2rem;
     max-width: 100%;
+}
+
+
+/*------ ABOUT --------*/
+#about{
+    background: white;
+}
+
+#about .container{
+    margin: 0;
+}
+
+#about .image{
+    position: relative;
+}
+
+#about .image::before{ 
+    content: '';
+    height: 100%;
+    width: 100%;
+    background: var(--base-color-second);
+    position: absolute;
+    top: -8.3%;
+    left: -33%;
+    z-index: 0;
+}
+
+#about .image img{
+    position: relative;
+
+}
+
+#about .image img,
+#about .image::before{
+    border-radius: 0.25%;
+}
+
+#about .text{
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
 }
