--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ img{
 
 
 /*------ BASE --------*/
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font: 400 1rem 'DM Sans', sans-serif;
     color: var(--text-color);
@@ -103,6 +107,14 @@ body{
     margin-bottom: 1rem;
 }
 
+.section header{
+    margin-bottom: 4rem;
+}
+
+.section header strong{
+    color: var(--base-color);
+}
+
 #header{
     border-bottom: 1px solid #e4e4e4;
     margin-bottom: 2rem;
@@ -115,6 +127,11 @@ body{
     left: 0;
     background-color: var(--body-color);
 }
+
+#header.scroll{
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
+}
+
 
 main{
     margin-top: calc(var(--header-height) + 2rem);
@@ -175,8 +192,13 @@ nav ul li a:hover::after{
 nav .menu{
     opacity: 0;
     visibility: hidden;
+    top: -20rem;
+    transition: 0.2s;
 }
 
+nav .menu ul{
+    display: none;
+}
 /* MOSTRAR MENU */
 nav.show .menu{
     height: 100vh;
@@ -195,6 +217,10 @@ nav.show .menu{
     background: var(--body-color);
 }
 
+nav.show .menu ul{
+    display: grid;
+}
+
 nav.show ul.grid{
     gap: 4rem;
 }
@@ -211,12 +237,16 @@ nav .icon-close{
     opacity: 0;
 
     position: absolute;
+    top: -1.5rem;
     right: 1.5rem;
+
+    transition: 0.3s;
 }
 
 nav.show div.icon-close{
     visibility: visible;
     opacity: 1;
+    top: 1.5rem;
 }
 
 /*------ HOME --------*/
@@ -306,4 +336,30 @@ nav.show div.icon-close{
 #about .text{
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+}
+
+
+/*------ Services --------*/
+.cards.grid{
+    gap: 1.5rem;
+}
+
+.card{
+    padding: 3.625rem 2rem;
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+    border-bottom: 0.25rem solid var(--base-color);
+    border-radius: .25rem .25rem 0 0;
+    text-align: center;
+}
+
+.card i{
+    display: block;
+    margin-bottom: 1.5rem;
+    font-size: 5rem;
+    color: var(--base-color);
+}
+
+.card .title{
+    font-size: 1.5rem;
+    margin-bottom: 0.75rem;
 }
