--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ img{
 }
 
 
-/*------ Variables --------*/
+/*------ VARIABLES --------*/
 :root{
     --header-height: 4.5rem;
     /*Colors*/
@@ -339,7 +339,7 @@ nav.show div.icon-close{
 }
 
 
-/*------ Services --------*/
+/*------ SERVICES --------*/
 .cards.grid{
     gap: 1.5rem;
 }
@@ -362,4 +362,97 @@ nav.show div.icon-close{
 .card .title{
     font-size: 1.5rem;
     margin-bottom: 0.75rem;
+}
+
+
+/*------ TESTIMONIALS --------*/
+#testimonials{
+    background: white;
+}
+
+#testimonials .container{
+    margin-left: 0;
+    margin-right: 0;
+}
+
+#testimonials header{
+    margin: auto 1.5rem 0 1.5rem;
+}
+
+#testimonials blockquote{
+    padding: 2rem;
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+    border-radius: 0.25rem;
+}
+
+#testimonials blockquote p{
+     position: relative;
+     text-indent: 1.875rem;
+     margin-bottom: 1.5rem;
+    color: var(--title-color);
+}
+
+#testimonials blockquote p span{
+    font: 700 2.5rem serif;
+
+    position: absolute;
+    top: -0.375rem;
+    left: -1.9rem;
+
+    color: var(--base-color);
+}
+
+#testimonials cite{
+    display: flex;
+    align-items: center;
+    font-style: normal;
+}
+
+#testimonials cite img{
+    width: 2rem;
+    height: 2rem;
+
+    object-fit: cover;
+    clip-path: circle();
+    margin-right: 0.5rem;
+}
+
+
+/*------ SWIPER --------*/
+.swiper-slide{
+    height: auto;
+    padding: 4rem 1rem;
+}
+
+.swiper-pagination-bullet-active{
+    background: var(--base-color);
+}
+
+
+/*------  CONTACT --------*/ 
+#contact .grid{
+    gap: 4rem;
+}
+
+#contact .text p{
+    margin-bottom: 2rem;
+}
+
+#contact .button i,
+#contact ul li i{
+    font-size: 1.5rem;
+    margin-right: 0.625rem;
+}
+
+#contact ul.grid{
+    gap: 2rem;
+}
+
+#contact ul li{
+    display: flex;
+    align-items: center;
+}
+
+#contact ul li i{
+    color: var(--base-color);
 }
