--- a/assets/Fonts/style.css
+++ b/assets/Fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?x4xuaw');
-  src:  url('fonts/icomoon.eot?x4xuaw#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?x4xuaw') format('truetype'),
-    url('fonts/icomoon.woff?x4xuaw') format('woff'),
-    url('fonts/icomoon.svg?x4xuaw#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?z5yel3');
+  src:  url('fonts/icomoon.eot?z5yel3#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?z5yel3') format('truetype'),
+    url('fonts/icomoon.woff?z5yel3') format('woff'),
+    url('fonts/icomoon.svg?z5yel3#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-up:before {
+  content: "\e90c";
+}
 .icon-phone:before {
   content: "\e900";
 }
