--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ img{
     --text-color: hsl(0 0% 46%);
     --text-color-light: hsl(0 0% 98%);
     --body-color: hsl(0 0% 98%);
+
+    /* fonts */
+    --title-font-size: 1.875rem;
 }
 
 
@@ -48,7 +51,7 @@ body{
 }
 
 .title{
-     font: 700 1.875rem 'Poppins', sans-serif;
+     font: 700 var(--title-font-size) 'Poppins', sans-serif;
      color: var(--title-color);
      -webkit-font-smoothing: auto;
 }
@@ -148,6 +151,9 @@ main{
     color: var(--base-color);
 }
 
+.logo-alt span{
+    color: var(--body-color);
+}
 
 /*------ NAVIGATION --------*/
 
@@ -455,4 +461,75 @@ nav.show div.icon-close{
 
 #contact ul li i{
     color: var(--base-color);
+}
+
+
+
+/*------ FOOTER --------*/
+footer{
+    background: var(--base-color);
+}
+
+footer .logo{
+    display: inline-block;
+    margin-bottom: 1.5rem;
+}
+
+footer .brand p{
+    color: var(--text-color-light);
+    margin-bottom: 0.75rem;
+}
+
+footer i{
+    font-size: 1.5rem;
+    color: var(--text-color-light);
+}
+
+footer .social a{
+    display: inline-block;
+
+    margin-right: 2rem;
+    transition: 0.3s;
+}
+
+footer .social a:hover{
+    transform: translateY(-10px);
+}
+
+/*Back to top*/
+.back-to-top{
+    background: var(--base-color);
+
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+
+    padding: 0.3rem;
+    clip-path: circle();
+
+    font-size: 1.5rem;
+    line-height: 0;
+
+    visibility: hidden;
+    opacity: 0;
+
+    transition: 0.3s;
+    transform: translateY(100%);
+
+    color: white;
+}
+
+.back-to-top.show{
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
+
+/*Responsividade*/
+@media (min-width: 992px){
+    .root{
+        --title-font-size: 2.2rem;
+    }
 }
