--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ img{
 
     /* fonts */
     --title-font-size: 1.875rem;
+    --subtitle-font-size: 1rem;
+
+    --title-font: 'Poppins', sans-serif;
+    --body-font: 'DM Sans', sans-serif;
 }
 
 
@@ -44,14 +48,14 @@ html{
 }
 
 body{
-    font: 400 1rem 'DM Sans', sans-serif;
+    font: 400 1rem var(--body-font);
     color: var(--text-color);
     background: var(--body-color);
     -webkit-font-smoothing: antialiased;
 }
 
 .title{
-     font: 700 var(--title-font-size) 'Poppins', sans-serif;
+     font: 700 var(--title-font-size) var(--title-font);
      color: var(--title-color);
      -webkit-font-smoothing: auto;
 }
@@ -64,7 +68,7 @@ body{
     align-items: center;
     padding: 0 2rem;
     border-radius: 0.25rem;
-    font: 500 1rem 'DM Sans', sans-serif;
+    font: 500 1rem var(--title-font);
     transition: background 0.3s;
 }
 
@@ -103,11 +107,15 @@ body{
 }
 
 .section{
-    padding: 5rem 0;
+    padding: calc(5rem + var(--header-height)) 0;
 }
 
 .section .title{
     margin-bottom: 1rem;
+}
+
+.section .subtitle{
+    font-size: var(--subtitle-font-size);
 }
 
 .section header{
@@ -143,7 +151,7 @@ main{
 
 /*------ lOGO --------*/
 .logo{
-    font: 700 1.31rem 'Poppins', sans-serif;
+    font: 700 1.31rem var(--title-font);
     color: var(--title-color);
 }
 
@@ -256,52 +264,51 @@ nav.show div.icon-close{
 }
 
 /*------ HOME --------*/
-#home{
-    overflow-x: hidden;
+#home {
+  overflow: hidden;
 }
 
-#home .container{
-    margin: 0;
+#home .container {
+  margin: 0;
 }
 
-#home .image{
-    position: relative;
+#home .image {
+  position: relative;
 }
 
-#home .image::before{ 
-    content: '';
-    height: 100%;
-    width: 100%;
-    background: var(--base-color-second);
-    position: absolute;
-    top: -16.8%;
-    left: 16.7%;
-    z-index: 0;
+#home .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -16.8%;
+  left: 16.7%;
+  z-index: 0;
 }
 
-#home .image img{
-    position: relative;
-    right: 2.93rem;
+#home .image img {
+  position: relative;
+  right: 2.93rem;
 }
 
 #home .image img,
-#home .image::before{
-    border-radius: 0.25%;
+#home .image::before {
+  border-radius: 0.25rem;
 }
 
-#home .text{
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-    text-align: center;
+#home .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  text-align: center;
 }
 
-#home .text h1{
-    margin-bottom: 1rem;
+#home .text h1 {
+  margin-bottom: 1rem;
 }
 
-#home .text p{
-    margin-bottom: 2rem;
-    max-width: 100%;
+#home .text p {
+  margin-bottom: 2rem;
 }
 
 
@@ -470,6 +477,10 @@ footer{
     background: var(--base-color);
 }
 
+footer.section{
+    padding: 4rem 0;
+}
+
 footer .logo{
     display: inline-block;
     margin-bottom: 1.5rem;
@@ -527,9 +538,127 @@ footer .social a:hover{
 
 
 
+
 /*Responsividade*/
+@media (min-width: 1200px){
+    .container{
+        max-width: 1120px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .section{
+        padding: 10rem 0;    
+    }
+
+    .section header,
+    #testimonials header{
+        max-width: 32rem;
+        text-align: center;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .button{
+        height: 3.125rem;
+    }
+
+    nav .menu{
+        opacity: 1;
+        visibility: visible;
+        top: 0;
+    }
+
+    nav .menu ul{
+        display: flex;
+        gap: 2rem;
+    }
+
+    nav .menu ul a.title{
+        font: 400 1rem var(--body-font);
+    }
+
+    nav .icon-menu{
+        display: none;
+    }
+
+    /*Layout*/
+
+    main{
+        margin-top: var(--header-height);
+    }
+
+    /*Home*/
+    #home .container{
+        grid-auto-flow: column;
+        justify-content: space-between;
+        margin: 0 auto;
+    }
+
+    #home .image{
+        order: 1;
+    }
+
+    #home .text{
+        order: 0;
+        max-width: 24rem;
+        text-align: left;
+    }
+
+    /*About*/
+    #about .container{
+        margin: 0 auto;
+        grid-auto-flow: column;
+        
+    }
+
+    /*Testimonials*/
+    #testimonials .container{
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    /*Services*/
+    .cards{
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .card{
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
+    /*Contact*/
+    #contact .container{
+        grid-auto-flow: column;
+    }
+
+    #contact .text{
+        align-items: center;
+    }
+
+    /*Footer*/
+    footer.section{
+        padding: 3.75rem 0;
+    }
+
+    footer .container{
+        grid-auto-flow: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    footer .logo{
+        font-size: 2.25rem;
+    }
+
+
+}
+
+
 @media (min-width: 992px){
     .root{
         --title-font-size: 2.2rem;
+        --subtitle-font-size: 1.125rem;
     }
 }
