--- a/style.css
+++ b/style.css
@@ -182,7 +182,8 @@ nav ul li a{
     position: relative;
 }
 
-nav ul li a:hover{
+nav ul li a:hover,
+nav ul li a.active{
     color: var(--base-color);
 }
 
@@ -199,7 +200,8 @@ nav ul li a::after{
     transition: width 0.3s;
 }
 
-nav ul li a:hover::after{
+nav ul li a:hover::after,
+nav ul li a.active::after{
     width: 100%;
 }
 
@@ -574,8 +576,14 @@ footer .social a:hover{
         gap: 2rem;
     }
 
-    nav .menu ul a.title{
+    nav .menu ul li a.title{
         font: 400 1rem var(--body-font);
+        -webkit-font-smoothing: antialiased;
+    }
+
+    nav .menu ul li a.active{
+        font-weight: bold;
+        -webkit-font-smoothing: auto;
     }
 
     nav .icon-menu{
